# imagenes_JC_Gutierrez

./: EcualizarBMP.sln  README.md
EcualizarBMP/: CMakeCache.txt  CMakeLists.txt  EcualizarBMP  EcualizarBMP.vcxproj  EcualizarBMP.vcxproj.filters  Makefile  Makefile (1)  README.md  another.cpp  cmake_install.cmake  do.cpp  functions.cpp  functions.h  main (1).cpp  main.cpp  me.cpp  reading_writing_struct.cpp  test.out
EcualizarBMP/input/: test.out
EcualizarBMP/out_ecualizado/: histograma.out
EcualizarBMP_external/: BMPVIEW.C  EcualizarBMP_external.vcxproj  EcualizarBMP_external.vcxproj.filters  main.cpp  toread.out
conv_compare/: conv_compare.vcxproj  kernel.cu
conv_marc/: CImg.h  conv_marc.vcxproj  kernel.cu
convolucion_compare/: convolucion_compare.vcxproj  kernel.cu
convoluciones_cpu_gpu/: chelo.cu  convolucion.cpp  convolucion.h  convoluciones_cpu_gpu.vcxproj  cvShowManyImages.cpp  helper.h  interpolacion.cpp  interpolacion.h  kernel.cu  kernel_mask.cu  kernel_masks.cu  main.cu  manzana.cpp  measurements  open_mp.cpp  opencv.cpp
convoluciones_marc/: Bosel.cpp  Bosel.h  convoluciones_marc.vcxproj  kernel.cu
fil/: fil.vcxproj  main.cpp
fili/: fili.vcxproj  main.cpp
interpolaciones/: Color_bot.cpp  Color_bot.h  Matriz_bot.cpp  Matriz_bot.h  Matriz_botb.cpp  Matriz_botb.h  helper.h  interpolaciones.sln  interpolaciones.vcxproj  interpolaciones.vcxproj.filters  main.cpp  opencvdemo.cpp
interpolaciones/openmp/: openmp.vcxproj
samplegl/: sample.c  samplegl.vcxproj  samplegl.vcxproj.filters
test/: main.cpp  test.vcxproj  test.vcxproj.filters
(+3 files in other folders)
